aerostore_macros/tests/ui/compile_fail_too_many_fields.rs
use aerostore_macros::speedtable;

#[speedtable]
#[repr(C)]
struct TooManyFields {
    f00: u8,
    f01: u8,
    f02: u8,
    f03: u8,
    f04: u8,
    f05: u8,
    f06: u8,
    f07: u8,
    f08: u8,
    f09: u8,
    f10: u8,
    f11: u8,
    f12: u8,
    f13: u8,
    f14: u8,
    f15: u8,
    f16: u8,
    f17: u8,
    f18: u8,
    f19: u8,
    f20: u8,
    f21: u8,
    f22: u8,
    f23: u8,
    f24: u8,
    f25: u8,
    f26: u8,
    f27: u8,
    f28: u8,
    f29: u8,
    f30: u8,
    f31: u8,
    f32: u8,
    f33: u8,
    f34: u8,
    f35: u8,
    f36: u8,
    f37: u8,
    f38: u8,
    f39: u8,
    f40: u8,
    f41: u8,
    f42: u8,
    f43: u8,
    f44: u8,
    f45: u8,
    f46: u8,
    f47: u8,
    f48: u8,
    f49: u8,
    f50: u8,
    f51: u8,
    f52: u8,
    f53: u8,
    f54: u8,
    f55: u8,
    f56: u8,
    f57: u8,
    f58: u8,
    f59: u8,
    f60: u8,
    f61: u8,
    f62: u8,
    f63: u8,
    f64: u8,
}

fn main() {}

